# Homeday-Rename

./: .env  README.md  pyproject.toml  run.sh  viz.py
mac_rename/: __main__.py  main.py
mac_rename/api/: routes.py
mac_rename/core/: file_manager.py  image_processor.py
mac_rename/static/: index.html  script.js  style.css
